# review

./: .gitattributes  instruction.md  task.toml
environment/: .dockerignore  BUILD.md  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  checksums.txt  entrypoint.sh  err.rs  go.mod  harbor_ctrf_plugin.py  main.go  package-lock.json  package.json  pom.xml  pytest_json_ctrf.py  requirements-verifier.txt  requirements.in  requirements.txt  run.sh  select.go  settings.xml  tsconfig.json  verifier-requirements.txt
environment/.cargo/: config.toml
environment/a7/: index.ts  stage.ts
environment/app/: .gitignore  .golangci.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  go.mod  go.sum  legacy-pixi-notes.txt  pixi.project  pixi.toml  pom.xml
environment/apt-packages/: libpython3.11-minimal_3.11.2-6+deb12u8_amd64.deb  libpython3.11-stdlib_3.11.2-6+deb12u8_amd64.deb  python3-pkg-resources_66.1.1-1+deb12u2_all.deb  python3-setuptools_66.1.1-1+deb12u2_all.deb  python3.11-minimal_3.11.2-6+deb12u8_amd64.deb  python3.11_3.11.2-6+deb12u8_amd64.deb
environment/b3/: index.ts  stage.ts
environment/bootstrap/: generate-fixtures.sh  generate_fixtures.py  seed-broken-state.sh
environment/c5/: index.ts  stage.ts
environment/canonical/: algorithm-policy.json  alias-register.json  fixture-checksums.json  policy-contract.json  retirement-register.json  topology-contract.json
environment/cases/: chain1-220390-220394.json
environment/catalog/: schema.sql  seed.sql
environment/challenge/: ciphertexts.csv  commitment.txt  manifest.txt  public.txt  relation.txt
environment/ci/: digest_check.py  smoke.sh
environment/cmd/: recover.go
environment/config/: artifact_contract.csv  cache-key-fields.env  feature_roles.csv  lab.toml  model_config.csv  pipeline.properties  toolchain.env
environment/configs/: train.toml
environment/contracts/: aliases.schema.json  answers.schema.json  audit-report.schema.json  dungeon-config.schema.json  encounter.schema.json  matrix_arms.json  playthrough.schema.json  report_schema.md  room.schema.json  scoring.schema.json
environment/d8l/: decode.go
environment/d9/: index.ts  stage.ts
environment/data/: Frogs_MFCCs.csv  act_map.json  case_gradeB_pub_dec6_n8_s0.txt  case_gradeB_pub_dec6_n9_s1.txt  case_gradeB_pub_dec8_n8_s2.txt  case_gradeB_pub_dec8_n9_s3.txt  case_gradeB_pub_dec9_n8_s4.txt  case_gradeB_pub_dec9_n9_s5.txt  case_gradeC_pub_nb5_ds4_ef15_s2.txt  case_gradeC_pub_nb5_ds4_ef25_s3.txt  case_gradeC_pub_nb6_ds3_ef15_s0.txt  case_gradeC_pub_nb6_ds3_ef25_s1.txt  case_gradeD_pub_00_m8_n6.txt  case_gradeD_pub_01_m10_n8.txt  case_gradeD_pub_02_m12_n9.txt  case_gradeD_pub_03_m10_n8.txt  case_gradeD_pub_04_m11_n9.txt  case_gradeE_arrow_n10.txt  case_gradeE_arrow_n8.txt  case_gradeE_banded_bw1.txt  case_gradeE_banded_bw2.txt  case_gradeE_blockdiag_2222.txt  case_gradeE_blockdiag_332.txt  case_gradeF_pub_cchain_end_n5.txt  case_gradeF_pub_cchain_mid_n6.txt  case_gradeF_pub_cchain_start_n5.txt  case_gradeF_pub_chain_end_n5.txt  case_gradeF_pub_chain_mid_n5.txt  case_gradeF_pub_chain_mid_n6.txt  case_gradeF_pub_chain_start_n5.txt  case_meta_base_00_n7.txt  case_meta_base_00_n7_conjtranspose.txt  case_meta_base_00_n7_scale0.txt  case_meta_base_00_n7_scale1.txt  case_meta_base_00_n7_scale2.txt  case_meta_base_00_n7_unitary0.txt  case_meta_base_00_n7_unitary1.txt  case_meta_base_01_n8.txt  case_meta_base_01_n8_conjtranspose.txt  case_meta_base_01_n8_scale0.txt  (+63 more)
environment/database/: seed.sql
environment/docs/: 01_overview.txt  02_inputs.txt  03_outputs.txt  04_splits.txt  05_r_surface.txt  README.md  abi-matrix-faq.md  architecture.md  attestation-refusal-envelope.md  attested-chain-selection.md  audit-format.md  authority-matrix.md  build_hints.txt  capacitance_model.md  case_format.md  case_ids.txt  certificate-policy-intersection.md  cli-surface.md  compose-security.md  contract_docstrings.py  data_cases.md  dependency-release-policy.md  dns-name-constraint-enforcement.md  elast_x_memo.md  eval_book.rst  feature-index.md  file_map.txt  flag_contract.txt  fm-score.md  gradient.md  hv7_usage.md  incident-2024q4.md  integer_format.txt  issuer-adjacency-seal.md  lab_contract.md  metrics.md  mode_census.md  model-format.md  modification_model.md  module_map.md  (+52 more)
environment/dossier-authority/: decision-authority.json  decision-scope-schema.json  fixture-checksums.json
environment/engine/: compile.cpp  compile.hpp  descriptor.cpp  descriptor.hpp  fingerprint.cpp  fingerprint.hpp  flow.cpp  flow.hpp  json.cpp  json.hpp  main.cpp  model.hpp  process.cpp  process.hpp  report.cpp  report.hpp
environment/environment/: go.mod
environment/etc/: version.txt
environment/exec/: diff_run  k_run.sh
environment/fixtures/: ctr-eval.fm  ctr-train.fm  f01.json  f02.json  f03.json  layout-a.spec  layout-b.spec
environment/gradle-policy/: CATALOG_RULES.md  LOCK_FORMAT.md  PLUGIN_COMPAT.md  REPORT_LAYOUT.md
environment/gridknit/: main.go
environment/h2n/: probe.go
environment/harness/: .gitignore  README.md  fixture_seals.json  notes.txt  pom.xml
environment/include/: matrix_utils.hpp  mtxread.h  query.h  spectral.h  svd_io.hpp  svd_types.hpp  vecgen.h
environment/input/: candidates.csv  collections.json  control.csv  fractures.csv
environment/j0/: mod.rs  pack_j0.rs
environment/j6/: index.ts  w_tape.ts  wrap.ts
environment/k2/: gr_step.go  legacy_u2.rs  mod.rs  stage_u2.rs
environment/k7m/: PhaseFold.java  ShadowClip.java
environment/k7p/: normalize.go
environment/k9m/: Cargo.toml
environment/lib/: digest_check.py  hash.ts  io.ts
environment/m3/: go.mod
environment/m3x/: normalize.go
environment/m4/: gate_m4.rs  mod.rs  probe_m4.rs
environment/m7q/: Cargo.toml  DecoyHud.rs  SynthCore.rs
environment/m8q/: pack.h  zx_copy.c  zx_pack.c
environment/merge/: Fuser.java  Scorer.java
environment/meshgrid/: workspace.manifest.json
environment/microprofile-jwt-auth/: pom.xml
environment/migrations/: train_naive_bayes.php
environment/n2v/: Cargo.toml  DecoyPretty.rs  FoldCore.rs
(+6420 files in other folders)
