[workspace]
members = [
    "crates/audit-events",
    "crates/clock-window",
    "crates/domain-model",
    "crates/policy-eval",
    "crates/provenance-hash",
    "crates/registry-ledger",
    "crates/release-core",
    "crates/release-queue",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
chrono = { version = "=0.4.40", default-features = false, features = ["clock", "serde", "std"] }
crossbeam-channel = "=0.5.14"
hex = "=0.4.3"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
semver = { version = "=1.0.26", features = ["serde"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde-json-wasm = "=1.0.0"
serde_json = "=1.0.140"
sha2 = "=0.10.8"
time = { version = "=0.3.36", features = ["formatting", "parsing", "serde", "macros"] }

audit-events = { path = "crates/audit-events", version = "=0.7.0" }
clock-window = { path = "crates/clock-window", version = "=0.7.0" }
domain-model = { path = "crates/domain-model", version = "=0.7.0" }
policy-eval = { path = "crates/policy-eval", version = "=0.7.0" }
provenance-hash = { path = "crates/provenance-hash", version = "=0.7.0" }
registry-ledger = { path = "crates/registry-ledger", version = "=0.7.0" }
release-queue = { path = "crates/release-queue", version = "=0.7.0" }
