[package]
name = "apkseal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "apkfold"
path = "cmd/apkfold/main.rs"

[[bin]]
name = "apk-board"
path = "cmd/apk-board/main.rs"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
sha2 = "=0.10.9"
anyhow = "=1.0.99"
hex = "=0.4.3"

[profile.release]
opt-level = 2
