[package]
name = "pg-bootstrap"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL bootstrap policy snapshot planner"
license = "MIT"
publish = false

[dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.140" }
serde_yaml = { version = "=0.9.34+deprecated" }
toml = { version = "=0.8.19" }
toml_edit = { version = "=0.22.20" }
sha2 = "=0.10.8"
hex = "=0.4.3"
ureq = { version = "=2.10.1", default-features = false }
thiserror = "=1.0.69"
ipnet = "=2.10.1"

[[bin]]
name = "pg-bootstrap"
path = "src/main.rs"
