[package]
name = "wf"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wf_a"
path = "src/wf_a.rs"

[[bin]]
name = "wf_b"
path = "src/wf_b.rs"

[[bin]]
name = "wf_c"
path = "src/wf_c.rs"

[dependencies]
m7q = { path = "../m7q" }
n2v = { path = "../n2v" }
p4w = { path = "../p4w" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rusqlite.workspace = true
