[package]
name = "audit-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-model.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true

[dev-dependencies]
semver.workspace = true
