[package]
name = "registry-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain-model.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
semver.workspace = true
