[package]
name = "release-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
audit-events.workspace = true
clock-window.workspace = true
domain-model.workspace = true
policy-eval.workspace = true
provenance-hash.workspace = true
registry-ledger.workspace = true
release-queue.workspace = true

[dev-dependencies]
semver.workspace = true
time.workspace = true
